@@ -17,6 +17,7 @@
  */
 package org.apache.zookeeper.cli;
 
+@SuppressWarnings("serial")
 public class CommandNotFoundException extends CliException {
 
     public CommandNotFoundException(String command) {
